Bug 108814 - Sidebar extension crashes Writer when inserting Chart
Summary: Sidebar extension crashes Writer when inserting Chart
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.1 all versions
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:6.0.0 target:5.4.0.2 target:5.3.5
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-06-27 13:23 UTC by christian.rufener
Modified: 2017-06-28 09:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["sfx2::sidebar::ResourceManager::UpdateModel(com::sun::star::uno::Reference<com::sun::star::frame::XModel> const &)"]


Attachments
AnalogClick.oxt extension (29.51 KB, application/vnd.openofficeorg.extension)
2017-06-27 13:23 UTC, christian.rufener
Details
gdb backtrace (20.68 KB, text/plain)
2017-06-27 14:11 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description christian.rufener 2017-06-27 13:23:58 UTC
Created attachment 134312 [details]
AnalogClick.oxt extension

Using the AnalogClock example extension crashes Writer when insert a chart.

How to reproduce:
(- Clean Installation of LO)
- Start Writer 
- Install the analogclock.oxt extension via Tools|Extension Manager
- Restart Writer
- Display the "Analog Clock" by selecting the correct sidebar deck
- Insert a Chart via Insert|Chart => Crash
Comment 1 Xisco Faulí 2017-06-27 14:04:50 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: 08f6f9dded1b142b858c455da03319abac691655
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

in

Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)

it crashes while clicking on the extension icon on the sidebar
Comment 2 Xisco Faulí 2017-06-27 14:11:22 UTC
Created attachment 134313 [details]
gdb backtrace
Comment 3 Julien Nabet 2017-06-27 14:20:16 UTC
Michael: the assert displayed on Xisco's bt comes from https://cgit.freedesktop.org/libreoffice/core/commit/?id=01575a06725648188d51de90323a6f1da97ef7a9
thought you might be interested in this one.
Comment 4 Xisco Faulí 2017-06-27 14:32:11 UTC
(In reply to Julien Nabet from comment #3)
> Michael: the assert displayed on Xisco's bt comes from
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=01575a06725648188d51de90323a6f1da97ef7a9
> thought you might be interested in this one.

Michael's commit is quite recent, while I can reproduce the crash back to 5b168b3fa568e48e795234dc5fa454bf24c9805e
Comment 5 Michael Stahl 2017-06-27 15:38:02 UTC
i don't get that assert backtrace but a different one
- but if you have any hint to reproduce that assertion it would be interesting.

it looks like a regression from:

commit 0635208edf1cdee4235ea87666a473ac81007555
Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
AuthorDate: Thu Jul 23 01:20:45 2015 +0200

    handle more than one chart with chart sidebar

fixed on master
Comment 6 Commit Notification 2017-06-27 15:38:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d109948f0dd4190d7aca1e0fa7e2706ef3f40a6c

tdf#108814 sfx2: fix crash in sidebar when XUpdateModel not implemented

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-06-27 20:45:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=830feb5ecfd041c52a118d51f56b26f65a77712e&h=libreoffice-5-4

tdf#108814 sfx2: fix crash in sidebar when XUpdateModel not implemented

It will be available in 5.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-06-27 20:46:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=622d2b4c250f6c3cc67f10887f3e3ec9db3f69a5&h=libreoffice-5-3

tdf#108814 sfx2: fix crash in sidebar when XUpdateModel not implemented

It will be available in 5.3.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 christian.rufener 2017-06-28 09:34:13 UTC
Thanks folks. 
I back-ported the fix into my own 5.3.4.2 version and it works.
Comment 10 Julien Nabet 2017-06-28 09:42:17 UTC
Let's put this one to VERIFIED then.