tdf#108814 sfx2: fix crash in sidebar when XUpdateModel not implemented

com.sun.star.ui.XUpdateModel was added in 5.1 so pre-existing extensions
don't implement it.

(regression from 0635208edf1cdee4235ea87666a473ac81007555)

Change-Id: I6749a9cf2fc82b9cd90d85a682247104e369e167
(cherry picked from commit d109948f0dd4190d7aca1e0fa7e2706ef3f40a6c)